some bugs squashed

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,7 +10,7 @@ $font-series: math.sqrt(2);
     padding: 0;
     box-sizing: border-box;
 
-    text-wrap: pretty;
+    text-wrap: balance;
 
     @include fonts.sans(1rem, 500, normal);
     font-weight: inherit;
@@ -20,7 +20,6 @@ $font-series: math.sqrt(2);
 
 p {
     max-width: $text-max-width;
-    text-wrap: balance;
     margin: 1rem 0;
 }
 
@@ -47,6 +46,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    width: 100vw;
 }
 
 main {
@@ -83,6 +83,7 @@ header>div {
     flex-direction: row;
     align-items: center;
     gap: 4px;
+    padding-right: 4px;
 
     a {
         height: 100%;
